// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
import { render } from '@testing-library/react';
import * as React from 'react';
import {
    AssessmentSummaryDetails,
    AssessmentSummaryDetailsProps,
} from 'reports/components/assessment-summary-details';
import { AssessmentReportBuilderTestHelper } from '../../DetailsView/assessment-report-builder-test-helper';

describe('AssessmentSummaryDetails', () => {
    describe('render', () => {
        test('Correct composition', () => {
            const props: AssessmentSummaryDetailsProps = {
                testSummaries:
                    AssessmentReportBuilderTestHelper.getAssessmentsSummaryReportModel()
                        .reportSummaryDetailsData,
            };

            const renderResult = render(<AssessmentSummaryDetails {...props} />);
            expect(renderResult.asFragment()).toMatchSnapshot();
        });

        test('Renders an OutcomeIconSet for 7 items', () => {
            const props: AssessmentSummaryDetailsProps = {
                testSummaries: [
                    {
                        displayName: 'test',
                        pass: 0,
                        fail: 0,
                        incomplete: 7,
                    },
                ],
            };

            const renderResult = render(<AssessmentSummaryDetails {...props} />);
            expect(renderResult.asFragment()).toMatchSnapshot();
        });

        test('Renders an OutcomeChipSet for 8 items', () => {
            const props: AssessmentSummaryDetailsProps = {
                testSummaries: [
                    {
                        displayName: 'test',
                        pass: 0,
                        fail: 0,
                        incomplete: 8,
                    },
                ],
            };

            const renderResult = render(<AssessmentSummaryDetails {...props} />);
            expect(renderResult.asFragment()).toMatchSnapshot();
        });
    });
});
